assets/custom.css
/*--------------------- Layout ----------------------------*/
html { height: 100%; }
body {
  font-family: "Helvetica Neue", "Helvetica";
  font-size: 14px;
  line-height: 18px;
  color: #30404f;
  margin: 0; padding: 0;
  height:100%;

}

#container {
  min-height: 100%;
  margin:0 auto;
  width:740px;
  max-width: 90%;
}

@media only screen and (max-width: 600px) {
  .github {
    display: none;
  }
}

header {
  clear: both;
  width: 100%;
  font-family: 'Bree Serif', serif;
  display: inline-block;
  color: #1C1C1C;
  background-color: #eaeaea;
  padding-top: 25px;
  padding-bottom: 10px;
}

header .contents {
  margin:0 auto;
  width:740px;
  max-width: 100%;
}

header a {
  text-decoration: none;
}

header img.logo {
  float: left;
  margin-right: 20px;
}
header h1 {
  padding-top: 1.1em;
  margin-bottom: 10px;
  color: #0071BC;
  margin-top: 0;
}
header h3 {
  margin-top: -5px;
  color: #4D4C4C;
}

ul.languages {
  list-style-type: none;
}

.languages li {
  float: left;
}

.languages li a {
  display: block;
  padding-right: 10px;
}

#footer {
  position: fixed;
  height: 25px;
  background-color: #fff;
  border-top: 1px solid #cfcfcf;
  bottom: 0;
  left: 40px;
  right: 40px;
  text-align: center;
  font-size: .7em;
  color: #aaa;
  padding-top: 3px;
}

img {
  max-width:100%;
}

a {
  color: #000;
}

b, strong {
  font-weight: normal;
}

p, ul, ol {
  margin: 15px 0 15px 0;
}

h1, h2, h3, h4, h5, h6 {
  color: #112233;
  line-height: 1em;
  font-weight: normal;
  margin: 30px 0 15px 0;
}

h1 {
  margin-top: 40px;
}

hr {
  border: 0;
  background: 1px solid #ddd;
  height: 1px;
  margin: 20px 0;
}

pre {
  margin: 5px 0 5px 0;
  padding: 5px 10px 5px 10px;
}

pre, tt, code {
  font-size: 12px; line-height: 16px;
  font-family: 'M+ 1mn', Menlo, Monaco, Consolas, "Lucida Console", monospace;
  background: #f5f5f8;
}

ul.tasks {
  font-size: 1.4em;
  line-height: 1.4em;
}
a:hover {
  color: #0071BC;
}
.aside::before {
  content: "\022CF    ";
  font-size: 1.5em;
  line-height: 1em;
  font-style: normal;
}
.aside {
  font-size: 0.9em;
  font-style: italic;
  color: #555;
  margin-bottom: 20px;
}
.annotation pre {
  display: block;
  margin: 0;
  padding: 7px 10px;
  background: #fcfdfc;
  overflow-x: auto;
}

.annotation pre code {
  border: 0;
  padding: 0;
  background: transparent;
}


blockquote {
  border-left: 5px solid #ccc;
  margin: 0;
  padding: 1px 0 1px 1em;
}

.sections blockquote p {
  font-family: Menlo, Consolas, Monaco, monospace;
  font-size: 12px; line-height: 16px;
  color: #999;
  margin: 10px 0 0;
  white-space: pre-wrap;
}

ul.sections {
  list-style: none;
  padding:0 0 5px 0;;
  margin:0;
}
/*
  Force border-box so that % widths fit the parent
  container without overlap because of margin/padding.

  More Info : http://www.quirksmode.org/css/box.html
*/
ul.sections > li > div {
  -moz-box-sizing: border-box;    /* firefox */
  -ms-box-sizing: border-box;     /* ie */
  -webkit-box-sizing: border-box; /* webkit */
  -khtml-box-sizing: border-box;  /* konqueror */
  box-sizing: border-box;         /* css3 */
}


/*---------------------- Jump Page -----------------------------*/
#jump_to, #jump_page {
  margin: 0;
  background: white;
  -webkit-box-shadow: 0 0 25px #777; -moz-box-shadow: 0 0 25px #777;
  -webkit-border-bottom-left-radius: 5px; -moz-border-radius-bottomleft: 5px;
  font: 16px Arial;
  cursor: pointer;
  text-align: right;
  list-style: none;
}

#jump_to a {
  text-decoration: none;
}

#jump_to a.large {
  display: none;
}
#jump_to a.small {
  font-size: 22px;
  font-weight: bold;
  color: #676767;
}

#jump_to, #jump_wrapper {
  position: fixed;
  right: 0; top: 0;
  padding: 10px 15px;
  margin:0;
}

#jump_wrapper {
  display: none;
  padding:0;
}

#jump_to:hover #jump_wrapper {
  display: block;
}

#jump_page {
  padding: 5px 0 3px;
  margin: 0 0 25px 25px;
}

#jump_page .source {
  display: block;
  padding: 15px;
  text-decoration: none;
  border-top: 1px solid #eee;
}

#jump_page .source:hover {
  background: #f5f5ff;
}

#jump_page .source:first-child {
}

/*---------------------- Low resolutions (> 320px) ---------------------*/
  .pilwrap { display: none; }

  ul.sections > li > div {
    display: block;
    padding:5px 10px 0 10px;
  }

  ul.sections > li > div.annotation ul, ul.sections > li > div.annotation ol {
    padding-left: 30px;
  }

  ul.sections > li > div.content {
    background: #f5f5f8;
    overflow-x:auto;
    margin:5px 10px 5px 10px;
    padding-bottom: 5px;
  }

  ul.sections > li > div.annotation pre {
    margin: 7px 0 7px;
    padding-left: 15px;
  }

  ul.sections > li > div.annotation p tt, .annotation code {
    background: #f8f8ff;
    border: 1px solid #dedede;
    font-size: 12px;
    padding: 0 0.2em;
  }

  /* .pilwrap { */
  /*   position: relative; */
  /*   display: inline; */
  /* } */
  /*  */
  /* .pilcrow { */
  /*   font: 12px Arial; */
  /*   text-decoration: none; */
  /*   color: #454545; */
  /*   position: absolute; */
  /*   top: 3px; left: -20px; */
  /*   padding: 1px 2px; */
  /*   opacity: 0; */
  /*   -webkit-transition: opacity 0.2s linear; */
  /* } */
  /* .for-h1 .pilcrow { */
  /*     top: 47px; */
  /*   } */
  /*   .for-h2 .pilcrow, .for-h3 .pilcrow, .for-h4 .pilcrow { */
  /*     top: 35px; */
  /*   } */
  /* ul.sections > li > div.annotation:hover .pilcrow { */
  /*   opacity: 1; */
  /* } */

/*---------------------- Syntax Highlighting -----------------------------*/

td.linenos { background-color: #f0f0f0; padding-right: 10px; }
span.lineno { background-color: #f0f0f0; padding: 0 5px 0 5px; }


/*

github.com style (c) Vasily Polovnyov <vast@whiteants.net>

*/

.hljs {
  display: block;
  overflow-x: auto;
  padding: 0.5em;
  color: #333;
  background: #f8f8f8;
  -webkit-text-size-adjust: none;
}

.hljs-comment,
.diff .hljs-header,
.hljs-javadoc {
  color: #998;
  font-style: italic;
}

.hljs-keyword,
.css .rule .hljs-keyword,
.hljs-winutils,
.nginx .hljs-title,
.hljs-subst,
.hljs-request,
.hljs-status {
  color: #333;
  font-weight: bold;
}

.hljs-number,
.hljs-hexcolor,
.ruby .hljs-constant {
  color: #008080;
}

.hljs-string,
.hljs-tag .hljs-value,
.hljs-phpdoc,
.hljs-dartdoc,
.tex .hljs-formula {
  color: #d14;
}

.hljs-title,
.hljs-id,
.scss .hljs-preprocessor {
  color: #900;
  font-weight: bold;
}

.hljs-list .hljs-keyword,
.hljs-subst {
  font-weight: normal;
}

.hljs-class .hljs-title,
.hljs-type,
.vhdl .hljs-literal,
.tex .hljs-command {
  color: #458;
  font-weight: bold;
}

.hljs-tag,
.hljs-tag .hljs-title,
.hljs-rules .hljs-property,
.django .hljs-tag .hljs-keyword {
  color: #000080;
  font-weight: normal;
}

.hljs-attribute,
.hljs-variable,
.lisp .hljs-body {
  color: #008080;
}

.hljs-regexp {
  color: #009926;
}

.hljs-symbol,
.ruby .hljs-symbol .hljs-string,
.lisp .hljs-keyword,
.clojure .hljs-keyword,
.scheme .hljs-keyword,
.tex .hljs-special,
.hljs-prompt {
  color: #990073;
}

.hljs-built_in {
  color: #0086b3;
}

.hljs-preprocessor,
.hljs-pragma,
.hljs-pi,
.hljs-doctype,
.hljs-shebang,
.hljs-cdata {
  color: #999;
  font-weight: bold;
}

.hljs-deletion {
  background: #fdd;
}

.hljs-addition {
  background: #dfd;
}

.diff .hljs-change {
  background: #0086b3;
}

.hljs-chunk {
  color: #aaa;
}

